TestSuite/PascalABCTests/errors/err0301.pas
var f: integer->integer := x->2*Result;

begin
end.